# Deep-Search-

./: .gitignore  README.md  file_metadata.json  hello.py  pyproject.toml
DeepSearch/: loaddialogs.py  main.py  osdog.py  requirements.txt  resultdialogs.py  searchhandler.py  test.py
DeepSearch/Mainwindow/: MainWindow.py
DeepSearch/Mainwindow/Dialogs/: advsearch.py  textresult.py
DeepSearch/Modules/: indexall.py  indexdoc.py  indexpdf.py  indextxt.py  test.py
DeepSearch/Modules/IndexFiles/Docx/: indexdocx.py
DeepSearch/Modules/IndexFiles/pdf/: indexpdf.py
DeepSearch/Modules/IndexFiles/text/: Indextxt.py
DeepSearch/Modules/Search/: advancesearch.py  searchdocx.py  searchpdf.py  searchtxt.py  simplesearch.py
DeepSearch/Modules/Utility/: db_utils.py
DeepSearch/Util/: db_utils.py  filemonitor.py
DeepSearch/app/: MainWindow.py  advancesearch.py  advsearch.py  loaddialogs.py  textresult.py
DeepSearch/core/: indexdoc.py  indexpdf.py  indextxt.py
DeepSearch/dbconnection/: db_utils.py  indexall.py  tempCodeRunnerFile.py
DeepSearch/search/: searchdocx.py  searchpdf.py  searchtxt.py  tempCodeRunnerFile.py
DeepSearch/services/: DeepSearchService.py  deepserachservices.py  filemonitor.py  indexall.py
Modules/: Indextxt.py  indexall.py
Modules/IndexFiles/: Indextxt.py
Modules/IndexFiles/Docx/: docxtextextract.py
Modules/Search/: searchtxt.py
UI/: Mainwindow.py  main.py
UI/Mainwindow/: MainWindow.py
