[project]
name = "smart-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyside6>=6.5.3",
    "python-docx>=1.1.0",
    "qt-material>=2.14",
    "qtawesome>=1.4.0",
    "tqdm>=4.67.1",
    "watchdog>=3.0.0",
    "whoosh>=2.7.4",
]
